fix: some spacing futilities

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -70,7 +70,7 @@
       box-shadow: 0px 20px 20px rgba(20, 20, 20, 0.2);
       transition: 0.25s box-shadow ease-out;
       width: 28%;
-      margin: 0 3% 13% 0;
+      margin-bottom: 13%;
       display: inline-block;
       color: inherit;
       text-decoration: none;
@@ -86,7 +86,7 @@
       .meta {
         color: #777;
         font-size:1.1rem;
-        padding:0.8em 0;
+        padding:1.2em 0;
         text-align: center;
         transition: 0.25s color ease-out,
 		    0.1s text-shadow ease-out;
